src/test/resources/org/nest/nestml/_cocos/valid/varHasTypeName.nestml
neuron B:
  state:
    a ms = 15.0
  end

  update:
    b mV = 0
  end

  function method(VV mV):
  end

end
