src/test/resources/org/nest/nestml/_cocos/invalid/varHasTypeName.nestml
neuron B:
  state:
    ms ms = 15.0
  end

  update:
    mV mV = 0
  end
end
